--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.cmeza</groupId>
+				<artifactId>spring-data-generator</artifactId>
+				<version>1.1.3</version>
+				<configuration>
+					<entity-package>
+						<param>com.ddsociety.projet_cinema.entities</param>
+					</entity-package>
+					<repository-package>com.ddsociety.projet_cinema.repositories</repository-package>
+					<repository-postfix>Repository</repository-postfix>
+					<manager-package>com.ddsociety.projet_cinema.managers</manager-package>
+					<manager-postfix>Manager</manager-postfix>
+					<only-annotations>false</only-annotations>
+					<overwrite>false</overwrite>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
