--- a/src/main/resources/application.properties.dist
+++ b/src/main/resources/application.properties.dist
@@ -6,7 +6,7 @@ server.port=8181
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/cinema?useSSL=false
+spring.datasource.url = jdbc:mysql://db:3306/cinema?useSSL=false
 
 # Username and password
 spring.datasource.username = userepul
